--- a/packages/web/components/Footer/Footer.module.css
+++ b/packages/web/components/Footer/Footer.module.css
@@ -49,3 +49,15 @@
 .link:hover {
   color: var(--color-primary);
 }
+
+@media (max-width: 25rem) {
+  .container {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 2rem;
+  }
+
+  .socialContainer {
+    align-self: flex-end;
+  }
+}
