--- a/packages/web/components/PostGallery/PostGallery.module.css
+++ b/packages/web/components/PostGallery/PostGallery.module.css
@@ -24,3 +24,9 @@
   font-size: 1.5rem;
   font-weight: bold;
 }
+
+@media (max-width: 30rem) {
+  .gallery {
+    grid-template-columns: 1fr;
+  }
+}
